--- a/CLIENT/makefile.conf
+++ b/CLIENT/makefile.conf
@@ -6,6 +6,6 @@ CC = gcc
 OFLAG = -o
 RM = rm -rf
 
-TARGET_SRCS = client.c
+TARGET_SRCS = client.c ../PROTOCOL/kmp.c
 TARGET_NAME = client
 TARGET_OBJS = $(TARGET_SRCS:%.c=%.o)
