--- a/SERVER/makefile.conf
+++ b/SERVER/makefile.conf
@@ -6,6 +6,6 @@ CC = gcc
 OFLAG = -o
 RM = rm -rf
 
-TARGET_SRCS = server.c
+TARGET_SRCS = server.c ../PROTOCOL/kmp.c
 TARGET_NAME = server
 TARGET_OBJS = $(TARGET_SRCS:%.c=%.o)
